--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -5,5 +5,5 @@ add_executable(test-lib src/main.c)
 target_include_directories(test-lib PRIVATE "include")
 
 # We link to "a-library and will get any compile time -D and -I
-target_link_libraries(test-lib a-library-shared)
+target_link_libraries(test-lib a-library-static)
 
